# diabetes-pred

./: Diabetesmodel.pkl  README.md  analysis.ipynb  app.py  pyproject.toml
.ipynb_checkpoints/: analysis-checkpoint.ipynb
