[tool.poetry]
name = "diabetes-pred"
version = "0.1.0"
description = ""
authors = ["Sejal Parate <sejbp3003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
numpy = "^2.2.1"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
